# pycrires

./: .gitignore  LICENSE  Makefile  README.rst  environment.yml  pipeline.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
docs/: about.rst  conf.py  contributing.rst  crires.rst  index.rst  installation.rst  modules.rst  pycrires.rst  requirements.txt  running.rst  tutorial.ipynb
pycrires/: __init__.py  _version.py  keywords.txt  pipeline.py  util.py
tests/: test_pipeline.py
