[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycrires"
version = "0.3.4"
authors = [
    {name = "Tomas Stolker", email = "stolker@strw.leidenuniv.nl"},
    {name = "Rico Landman", email = "rlandman@strw.leidenuniv.nl"},
]
description = "Data reduction pipeline for VLT/CRIRES+"
readme = "README.rst"
requires-python = ">=3.9,<3.12"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = ["dependencies"]

[project.urls]
Documentation = "https://pycrires.readthedocs.io"
Repository = "https://github.com/tomasstolker/pycrires"
Issues = "https://github.com/tomasstolker/pycrires/issues"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
