[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pycrires"
authors = [
    {name = "Tomas Stolker", email = "stolker@strw.leidenuniv.nl"},
    {name = "Rico Landman", email = "rlandman@strw.leidenuniv.nl"},
]
description = "Data reduction pipeline for VLT/CRIRES+"
readme = "README.rst"
requires-python = ">=3.11,<3.14"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy",
    "astroquery",
    "beartype",
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas",
    "pooch",
    "scikit-image",
    "scipy",
    "skycalc_ipy",
    "tqdm",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "jupyter",
    "nbconvert",
    "nbsphinx",
    "pandoc",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-automodapi",
    "sphinxawesome-theme",
]
test = [
    "black",
    "flake8",
    "pycodestyle",
    "pylint",
    "pytest",
    "pytest-cov",
]

[project.urls]
Documentation = "https://pycrires.readthedocs.io"
Repository = "https://github.com/tomasstolker/pycrires"
Issues = "https://github.com/tomasstolker/pycrires/issues"

[tool.setuptools]
packages = ["pycrires"]

[tool.setuptools_scm]
write_to = "pycrires/_version.py"
local_scheme = "no-local-version"
